--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,6 +11,7 @@ ul {
 }
 
 .input {
+  pointer-events: all;
   border-bottom: 1px grey solid;
   padding-bottom: 20px;
   margin-bottom: 10px;
